<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvTitulo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="4dp"
        android:textSize="24sp"
        android:text="@string/tvTitulo1" />

    <TextView
        android:id="@+id/tvVersionAndroidLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/tvVersionAndroidLB" />

    <TextView
        android:id="@+id/tvVersionAndroid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tvVersionAndroid" />

    <TextView
        android:id="@+id/tvLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/tvLight" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <Button
        android:id="@+id/btnOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnOff" />

    <Button
        android:id="@+id/btnOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btnOn" />
    </TableRow>

    <TextView
        android:id="@+id/tvLevelBaterryLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"
        android:text="@string/tvLevelBatteryLB" />

    <TextView
        android:id="@+id/tvLevelBattery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tvLevelBattery" />

    <ProgressBar
        android:id="@+id/pbLevelBattery"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:contentDescription="@string/pbLevelBattery" />

    <TextView
        android:id="@+id/tvConectionLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/tvConectionLB" />

    <TextView
        android:id="@+id/tvConection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tvConection" />

    <TextView
        android:id="@+id/tvTitulo2"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:padding="4dp"
        android:text="@string/tvTitulo2"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvDactilar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDactilar"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:text="@string/tvCamera" />

    <TextView
        android:id="@+id/tvEws"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:text="@string/tvEws" />

    <TextView
        android:id="@+id/tvRS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:text="@string/tvRS" />

    <TextView
        android:id="@+id/tvInternet"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/tvInternet"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btnCheckPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCheckPermission" />

    <Button
        android:id="@+id/btnRequestPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRequestPermission" />

    <EditText
        android:id="@+id/etTexto"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/etTexto"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSavefile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSavefile" />

</LinearLayout>